--- a/index.html
+++ b/index.html
@@ -10,30 +10,32 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
   <body  class="p-3 mb-2 bg-primary-subtle">
+
     <!-- NavBar -->
+
     <ul class="nav nav-underline bg-secondary justify-content-center sticky-top ">
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="#">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Artist</a>
+        <a class="nav-link" href="#Singers">Singers</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Tickets</a>
+        <a class="nav-link" href="#Tickets">Tickets</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Menu</a>
+        <a class="nav-link" href="#Food">Menu</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Location</a>
+        <a class="nav-link" href="#Location">Location</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="#Contact">Contact</a>
       </li>
-
     </ul>
 
       <!-- Carousel SLide -->
+
       <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -62,12 +64,14 @@
         </button>
       </div>
 <!-- Cards group -->
-      <div class="card-group gap-3 h-100 ">
-        <div class="card">
+      <h2 class="singers text-center" >Singers</h2>
+      <div id="Singers" class="card-group gap-3 h-100 text-center">
+        
+        <div class="card" >
           <img src="./images/adele.jpg" class="card-img-top" alt="adele">
           <div class="card-body bg-secondary">
             <h5 class="card-title">Adele</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
             <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
           </div>
         </div>
@@ -75,7 +79,7 @@
           <img src="./images/ricky-martin.jpg" class="card-img-top" alt="ricky">
           <div class="card-body bg-secondary">
             <h5 class="card-title">Ricky Martin</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
             <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
           </div>
         </div>
@@ -83,11 +87,110 @@
           <img src="./images/bruno-mars.jpg" class="card-img-top" alt="bruno">
           <div class="card-body bg-secondary">
             <h5 class="card-title">Bruno Mars</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
             <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
           </div>
         </div>
       </div>
+
+      <!-- Buy Tickets -->
+
+      <div id="Tickets" class="row text-center">
+        <h2>Buy Entry</h2>
+        <div class="col-sm-6 mb-3 mb-sm-3">
+          <div class="card bg-secondary">
+            <div class="card-body">
+              <select class="form-select" aria-label="Default select example">
+                <option selected>Please select</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+              </select>
+              <h5 class="card-title">Basic Entry</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, ad!</p>
+              <a href="#" class="btn btn-primary">Buy Ticket</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card bg-secondary">
+            <div class="card-body">
+              <select class="form-select" aria-label="Default select example">
+                <option selected>Please select</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+              </select>
+              <h5 class="card-title">Special Entry</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, ad!</p>
+              <a href="#" class="btn btn-primary">Buy Ticket</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 mb-3 mb-sm-3">
+          <div class="card bg-secondary">
+            <div class="card-body">
+              <select class="form-select" aria-label="Default select example">
+                <option selected>Please select</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+              </select>
+              <h5 class="card-title">Premium Entry</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, ad!</p>
+              <a href="#" class="btn btn-primary">Buy Tiket</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card bg-secondary">
+            <div class="card-body">
+              <select class="form-select" aria-label="Default select example">
+                <option selected>Please select</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+              </select>
+              <h5 class="card-title">VIP Entry</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, ad!</p>
+              <a href="#" class="btn btn-primary">Buy Ticket</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+<!-- Menu -->
+ 
+<h2 class="food">Food and Drinks</h2>
+
+<div id="Food" class="container-menu">
+  <div class="menu">
+    <img src="./images/food1.jpg" alt="Avatar" class="image">
+    <div class="overlay">
+      <div class="text">
+        <h3>Hamburger and Drinks</h3>
+        <p>£ 10</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+      </div>
+    </div>
+  </div>
+  <div class="menu">
+    <img src="./images/food2.jpg" alt="Avatar" class="image">
+    <div class="overlay">
+      <div class="text">
+        <h3>Pizza and Drinks</h3>
+        <p>£ 10</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Location -->
+
+
+<!-- Contact -->
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
  integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script> 
 </body>
