--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <body  class="p-3 mb-2 bg-primary-subtle">
 
     <!-- NavBar -->
-
     <ul class="nav nav-underline bg-secondary justify-content-center sticky-top ">
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -33,9 +32,7 @@
         <a class="nav-link" href="#Contact">Contact</a>
       </li>
     </ul>
-
       <!-- Carousel SLide -->
-
       <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -92,9 +89,7 @@
           </div>
         </div>
       </div>
-
       <!-- Buy Tickets -->
-
       <div id="Tickets" class="row text-center">
         <h2>Buy Entry</h2>
         <div class="col-sm-6 mb-3 mb-sm-3">
@@ -158,11 +153,8 @@
           </div>
         </div>
       </div>
-
 <!-- Menu -->
- 
 <h2 class="food">Food and Drinks</h2>
-
 <div id="Food" class="container-menu">
   <div class="menu">
     <img src="./images/food1.jpg" alt="Avatar" class="image">
@@ -185,11 +177,26 @@
     </div>
   </div>
 </div>
-
-<!-- Location -->
-
-
-<!-- Contact -->
+<!-- Contact and Location-->
+<h2 class="contact-form">Contact and Location</h2>
+<div class="map-responsive">
+  <form id="Contact">
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input type="text" class="form-control" id="name" placeholder="Enter your name">
+    </div>
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input type="email" class="form-control" id="email" placeholder="Enter your email">
+    </div>
+    <div class="form-group">
+      <label for="message">Message</label>
+      <textarea class="form-control" id="message" rows="5" placeholder="Enter your message"></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+  <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+</div>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
