--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lyre Music Festival</title>
-  <link rel="icon" href="images/Dragos_Logo.jpg">
+  <link rel="icon" href="./images/Dragos_Logo_transparent.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" 
   integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
@@ -198,7 +198,7 @@
   </form>
   <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-  <img class="logo-bottom" src="/images/Dragos_Logo.jpg" alt="Logo-bottom">
+  <img class="logo-bottom" src="./images/Dragos_Logo_transparent.png" alt="Logo-bottom">
 </div>
 
 
